# echoliner-labs

./: README.md  pyproject.toml
docs/wiki/: Analytics.md  README.md  Robotics.md  Translation.md  Vision.md
echoliner/: __init__.py
echoliner/analytics/: __init__.py  digital_twin.py  forecasting.py  metrics.py  streaming.py
echoliner/common/: __init__.py  linalg.py  sampling.py
echoliner/robotics/: __init__.py  control.py  dynamics.py  kinematics.py  planning.py
echoliner/translation/: __init__.py  alignment.py  domain_lexicon.py  evaluation.py  lexicon.py  simple_translator.py  speech.py
echoliner/vision/: __init__.py  calibration.py  edge_detection.py  fusion.py  geometry.py  reconstruction.py  tracking.py
scripts/: generate_lexicon.py
tests/: test_analytics.py  test_robotics.py  test_translation.py  test_vision.py
