[project]
name = "echoliner"
version = "0.2.0"
description = "EchoLiner open-source modular manufacturing toolkit"
authors = [{name = "EchoLiner Labs"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
